--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 	          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 	          	<i class="el-icon-lines"></i>
 	          </button>
-	          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><h1> Solitude</h1></a>
+	          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><h1>Website B3</h1></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          	<ul class="nav navbar-nav">
-		            <li><a href="#home" class="smoothScroll">Home</a></li>
-					<li> <a href="#about" class="smoothScroll">About</a></li>
-					<li> <a href="#services" class="smoothScroll">Services</a></li>					
-					<li> <a href="#team" class="smoothScroll">Team</a></li>
-					<li> <a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-					<li> <a href="#blog" class="smoothScroll">Blog</a></li>
-					<li> <a href="#contact" class="smoothScroll">Contact</a></li>
+		            <li><a href="#home" class="scroll-page">Home</a></li>
+					<li> <a href="#about" class="scroll-page">About</a></li>
+					<li> <a href="#services" class="scroll-page">Services</a></li>					
+					<li> <a href="#team" class="scroll-page">Team</a></li>
+					<li> <a href="#portfolio" class="scroll-page">Portfolio</a></li>
+					<li> <a href="#blog" class="scroll-page">Blog</a></li>
+					<li> <a href="#contact" class="scroll-page">Contact</a></li>
 				</ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
@@ -66,10 +66,10 @@
 		<!-- ==== HEADERWRAP ==== -->
 	    <div id="headerwrap" id="home" name="home">
 			<header class="clearfix">
-	  		 		<h1 class="animated bounceIn">Template Stock</h1>
-	  		 		<p class="animated slideInLeft">Let Us Help You Be Something Awesome.</p>
-	  		 		<p class="animated slideInRight">We Are Here For You.</p>
-	  		 		<a href="#about" class="btn homebtn smoothScroll">Learn More <i class="el-icon-chevron-down homeicon"></i></a>
+	  		 		<h1 class="animated bounceIn">Kelompok B3</h1>
+	  		 		<p class="animated slideInLeft"><strong>"Learn Together To Be Better."</strong></p>
+	  		 		<p class="animated slideInRight">Selamat Datang di Website-nya B3!</p>
+	  		 		<a href="#blog" class="btn homebtn scroll-page">Anggota <i class="el-icon-chevron-down homeicon"></i></a>
 	  		</header>	    
 	    </div><!-- /headerwrap -->
 
@@ -448,7 +448,7 @@
 					<div class="col-md-10 col-sm-10 col-xs-10 blog-content fade-up">
 						<h2>A Beautiful Story</h2>
 						<p>Armed with insight, we embark on designing the right brand experience that engages the audience. It encompasses both the strategic direction and creative execution that solves a business problem and brings the brand to life.</p>
-						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our client’s brand.</p>
+						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our clientï¿½s brand.</p>
 						<p><a href="single-post.html" class="btn btn-success">Read More</a></p>
 					</div>
 				</div><!-- /col -->
@@ -460,14 +460,14 @@
 					</div>
 					<div class="col-md-2 col-sm-2 col-xs-2 blog-meta fade-down">
 						<img class="img" src="images/team02.jpg">
-						<h4>Dan Jones</h4>
-						<h5>Published April 4th.</h5>
+						<h4>Delvito R. D.</h4>
+						<h5>211524039</h5>
 					</div>
 					<div class="col-md-10 col-sm-10 col-xs-10 blog-content fade-up">
-						<h2>A Beautiful Story</h2>
-						<p>Armed with insight, we embark on designing the right brand experience that engages the audience. It encompasses both the strategic direction and creative execution that solves a business problem and brings the brand to life.</p>
-						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our client’s brand.</p>
-						<p><a href="single-post.html" class="btn btn-success">Read More</a></p>
+						<h2>Delvito Rahim Derivansyah</h2>
+						<p>Delvito, seorang mahasiswa D4 Teknik Informatika, Politeknik Negeri Bandung. Selain berkuliah di Teknik Informatika, Delvito pun memiliki kesibukan lainnya yaitu menekuni hobinya di bidang ilmu-ilmu syarâ€™i, seperti aqidah, fiqh, bahasa Arab, dsb. Selain itu, Delvito menekuni hobinya yang lain seperti membaca, mengajar, dan <i>public speaking</i></p>
+						<p>Delvito memiliki motto hidup yaitu <strong>"Let good deeds flow, even when we're gone"</strong>. Kemampuan teknis yang dimiliki oleh Delvito antara lain: mendesain, <i>public speaking</i>, fotografi, dan mengajar.</p>
+						<p><a href="https://www.instagram.com/delvito.rd" target="_blank" rel="nofollow" class="btn btn-success">Instagram</a></p>
 					</div>
 				</div><!-- /col -->
 
@@ -484,7 +484,7 @@
 					<div class="col-md-10 col-sm-10 col-xs-10 blog-content fade-up">
 						<h2>A Beautiful Story</h2>
 						<p>Armed with insight, we embark on designing the right brand experience that engages the audience. It encompasses both the strategic direction and creative execution that solves a business problem and brings the brand to life.</p>
-						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our client’s brand.</p>
+						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our clientï¿½s brand.</p>
 						<p><a href="single-post.html" class="btn btn-success">Read More</a></p>
 					</div>
 				</div><!-- /col -->
@@ -502,7 +502,7 @@
 					<div class="col-md-10 col-sm-10 col-xs-10 blog-content fade-up">
 						<h2>A Beautiful Story</h2>
 						<p>Armed with insight, we embark on designing the right brand experience that engages the audience. It encompasses both the strategic direction and creative execution that solves a business problem and brings the brand to life.</p>
-						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our client’s brand.</p>
+						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our clientï¿½s brand.</p>
 						<p><a href="single-post.html" class="btn btn-success">Read More</a></p>
 					</div>
 				</div><!-- /col -->
@@ -510,7 +510,39 @@
 			</div><!-- /row -->
 			<br>
 			<br>
-		</div><!-- /container -->
+			<table class="table">
+				<tr>
+				  <th>Nama</th>
+				  <th>NIM</th>
+				  <th>Domisili</th>
+				</tr>
+				<tr>
+				  <td>Delvito Rahim Derivansyah</td>
+				  <td>211524039</td>
+				  <td>Bandung</td>
+				</tr>
+				<tr>
+					<td>Nayara Saffa</td>
+					<td>211524052</td>
+					<td>Bandung</td>
+				</tr>
+				<tr>
+					<td>Raka mahardika maulana</td>
+					<td>211524056</td>
+					<td>Bandung</td>
+				</tr>
+				<tr>
+					<td>Reza Ananta Permadi Supriyo</td>
+					<td>211524059</td>
+					<td>Bandung</td>
+				</tr>
+				<tr>
+					<td>Syifa Khairina</td>
+					<td>211524063</td>
+					<td>Bandung</td>
+				</tr>
+			  </table>
+		</div>	<!-- /container -->
 
 		
 		<!-- ==== SECTION DIVIDER6 ==== -->
