Visualisasi Tabel HTML

--- a/index.html
+++ b/index.html
@@ -744,15 +744,15 @@
 								<tbody>
 								  <tr>
 									<td class="tg-jc4f">Nama Tender</td>
-									<td class="tg-jc4f">Besar HPS</td>
+									<td class="tg-jc4f">Besar Pagu</td>
 									<td class="tg-mcu2">Nama Tender</td>
-									<td class="tg-mcu2">Besar HPS</td>
+									<td class="tg-mcu2">Besar Pagu</td>
 									<td class="tg-jc4f">Nama Tender</td>
-									<td class="tg-jc4f">Besar HPS</td>
+									<td class="tg-jc4f">Besar Pagu</td>
 									<td class="tg-w092">Nama Tender</td>
-									<td class="tg-w092">Besar HPS</td>
+									<td class="tg-w092">Besar Pagu</td>
 									<td class="tg-py0j">Nama Tender</td>
-									<td class="tg-py0j">Besar HPS</td>
+									<td class="tg-py0j">Besar Pagu</td>
 								  </tr>
 								  <tr>
 									<td class="tg-gd2f"><span style="background-color:#FFF">Pembangunan jalan dan Jembatan Lemah Abang spse 3</span></td>
@@ -848,15 +848,15 @@
 								<tbody>
 								  <tr>
 									<td class="tg-w092">Nama Tender</td>
-									<td class="tg-w092">Besar HPS</td>
+									<td class="tg-w092">Besar Pagu</td>
 									<td class="tg-jc4f">Nama Tender</td>
-									<td class="tg-jc4f">Besar HPS</td>
+									<td class="tg-jc4f">Besar Pagu</td>
 									<td class="tg-w092">Nama Tender</td>
-									<td class="tg-w092">Besar HPS</td>
+									<td class="tg-w092">Besar Pagu</td>
 									<td class="tg-jc4f">Nama Tender</td>
-									<td class="tg-jc4f">Besar HPS</td>
+									<td class="tg-jc4f">Besar Pagu</td>
 									<td class="tg-mxaw">Nama Tender</td>
-									<td class="tg-mxaw">Besar HPS</td>
+									<td class="tg-mxaw">Besar Pagu</td>
 								  </tr>
 								  <tr>
 									<td class="tg-gd2f"><span style="background-color:#FFF">Pengawas Pembangunan Telagadesa Potorono spse 4</span></td>
